<resources>
    <string name="app_name">Telederma</string>
    <string name="campo_requerido">Campo requerido</string>
    <string name="msj_error">Ha ocurrido un error</string>
    <string name="msj_error_timeout">Tiempo de espera agotado</string>
    <string name="msj_campos_requeridos">Verifique los campos requeridos</string>
    <string name="msj_sin_conexion">Sin conexión :(</string>
    <string name="msj_con_conexion">Conectado!</string>
    <string name="msj_espera">Espere un momento...</string>
    <string name="msj_aceptar_terminos">Debe aceptar los términos y condiciones</string>
    <string name="msj_error_timeout_reintentando">Sin respuesta, reintentando...</string>
    <string name="msj_la_consulta_se_enviara_tan_pronto_exista_conexion">La consulta se enviará tan pronto exista conexión a internet</string>
    <string name="compartido">Compartido</string>
    <string name="control">Control</string>
    <string name="consulta_medica">Consulta médica</string>
    <string name="consulta_enfermeria">Consulta enfermería</string>
    <string name="control_medico">Control médico</string>
    <string name="control_enfermeria">Control enfermería</string>
    <string name="empezar">Empezar</string>
    <string name="siguiente">Siguiente</string>
    <string name="TAG_REQUERIDO">REQUERIDO</string>
    <string name="navigation_drawer_open">Abrir menú</string>
    <string name="navigation_drawer_close">Cerrar menú</string>
    <string name="action_settings">Configuración</string>
    <string name="action_consultas">Consultas</string>
    <string name="action_nueva_consulta">Nueva consulta</string>
    <string name="action_pacientes">Pacientes</string>
    <string name="action_aprende">Aprende</string>
    <string name="action_gestion">Gestión</string>
    <string name="action_mi_perfil">Mi perfil</string>
    <string name="action_acerca_de">Acerca de Telederma</string>
    <string name="action_creditos">Créditos</string>
    <string name="action_salir">Salir</string>
    <string name="label_usuario">* Usuario</string>
    <string name="label_confirmar_documento">* Confirmar número de identificación</string>
    <string name="label_current_password">* Contraseña actual</string>
    <string name="message_change_password"> Sino quieres cambiar de contraseña, dejar en blanco los siguientes campos:</string>
    <string name="change_password">Cambiar contraseña </string>
    <string name="label_new_password">* Nueva Contraseña </string>
    <string name="label_contrasena">* Contraseña</string>
    <string name="label_seleccionar">Seleccionar</string>
    <string name="label_sin_controles">Sin controles</string>
    <string name="label_nombre">Nombre</string>
    <string name="label_celular">* Teléfono de contacto</string>
    <string name="label_correo">* Correo</string>
    <string name="label_tipo_profesional">* Tipo profesional</string>
    <string name="label_tarjeta_profesional">* Tarjeta profesional</string>
    <string name="label_nombre_s">* Nombre(s)</string>
    <string name="label_apellido_s">* Apellido(s)</string>
    <string name="label_confirmar_contrasena">* Confirmar contraseña</string>
    <string name="label_confirm_new_password">* Confirmar nueva contraseña</string>
    <string name="label_enviar">Enviar</string>
    <string name="label_codigo">Código</string>
    <string name="label_firmar">Firmar</string>
    <string name="label_confirmar">Confirmar</string>
    <string name="label_cancelar">Cancelar</string>
    <string name="label_borrar">Borrar</string>
    <string name="label_no_aplica">N/A</string>
    <string name="detalle_consulta_label_nombre">Nombre: </string>
    <string name="detalle_consulta_label_edad">Edad: </string>
    <string name="detalle_consulta_label_documento">Documento: </string>
    <string name="detalle_consulta_label_fecha">Fecha: </string>
    <string name="login_bienvenido">Bienvenido</string>
    <string name="login_cedula_hint">Ingrese su número de cédula</string>
    <string name="current_password_hint">Ingrese su contraseña actual</string>
    <string name="login_contrasena_hint">Ingrese su contraseña</string>
    <string name="login_new_password_hint">Ingrese su nueva contraseña</string>
    <string name="login_confirm_new_password_hint">Confirme su nueva contraseña</string>
    <string name="login_olvide_contrasena">Olvidé mi contraseña</string>
    <string name="login_ingresar">Ingresar</string>
    <string name="login_soy_nuevo_title">Soy nuevo</string>
    <string name="soy_nuevo_usuario_hint">Ingrese el número de identificación</string>
    <string name="soy_nuevo_tarjeta_profesional_hint">Número de la tarjeta profesional</string>
    <string name="soy_nuevo_nombre_hint">Ingrese su nombre</string>
    <string name="soy_nuevo_apellido_hint">Ingrese su apellido</string>
    <string name="soy_nuevo_celular_hint">Ingrese número de contacto</string>
    <string name="soy_nuevo_correo_hint">Ingrese su correo electrónico</string>
    <string name="soy_nuevo_confirmar_contrasena_hint">Confirme su contraseña</string>
    <string name="soy_nuevo_aceptar_terminos">* He leído y acepto los términos y condiciones,
        incluyendo el tratamiento de mis datos personales</string>
    <string name="soy_nuevo_ver_terminos">Ver política de datos y términos y condiciones</string>
    <string name="soy_nuevo_registrarme">Registrarme</string>
    <string name="soy_nuevo_firma_title">Por favor realizar la firma en la pantalla del celular</string>
    <string name="soy_nuevo_firma_msj_requerido">Debe agregar su firma</string>
    <string name="soy_nuevo_msj_confirmar_documento">Confirmación de documento no coincide</string>
    <string name="soy_nuevo_msj_confirmar_contrasena">Confirmación de contraseña no coincide</string>
    <string name="soy_nuevo_msj_email_invalido">Verifique su email</string>
    <string name="soy_nuevo_msj_contrasena_invalido">Verifique su contraseña</string>
    <string name="soy_nuevo_msj_reglas_contrasena">Mínimo 6 caracteres</string>
    <string name="mi_perfil_title">Editar perfil</string>
    <string name="mi_perfil_usuario">Usuario</string>
    <string name="mi_perfil_nombre">Nombre(s)</string>
    <string name="mi_perfil_nombre_hint">Ingrese su nombre</string>
    <string name="mi_perfil_apellido">Apellido(s)</string>
    <string name="mi_perfil_apellido_hint">Ingrese su apellido</string>
    <string name="mi_perfil_celular">Teléfono de contacto</string>
    <string name="mi_perfil_celular_hint">Ingrese su número de contacto</string>
    <string name="mi_perfil_correo">Correo</string>
    <string name="mi_perfil_correo_hint">Ingrese su correo electrónico</string>
    <string name="mi_perfil_firma">Firma</string>
    <string name="mi_perfil_firma_error">Error descargando firma</string>
    <string name="mi_perfil_guardar_cambios">Guardar cambios</string>
    <string name="mi_perfil_progreso_descargar">Descargando imagen</string>
    <string name="contrasena_enviar_codigo">Enviar código a su correo</string>
    <string name="contrasena_codigo_hint">Ingrese el código del SMS</string>
    <string name="contrasena_nueva_contrasena_hint">Ingrese su nueva contraseña</string>
    <string name="contrasena_confirmar_nueva_contrasena_hint">Confirme su nueva contraseña</string>
    <string name="contrasena_recuperar_title">Recuperar contraseña</string>
    <string name="contrasena_recuperar_contacto_1">No ha podido recuperar su contraseña o ingresar</string>
    <string name="contrasena_recuperar_contacto_2">Por favor comuníquese con nosotros a la línea telefónica
        (571) 3077072 Bogotá o al correo electrónico telederma@dermatología.gov.co</string>
    <string name="msj_inicio_sesion_bienvenido">Bienvenido</string>
    <string name="msj_inicio_sesion_no_encuentra_usuario">No se encuentra el usuario ingresado</string>
    <string name="msj_nuevo_usuario_existe">El documento ya se encuentra registrado para otro usuario</string>
    <string name="dialog_descartar_req_advertencia">Advertencia</string>
    <string name="dialog_descartar_req_motivo">Seleccione el motivo por el que desea descartar esta consulta</string>
    <string name="dialog_descartar_req_radio_1">El paciente no regresó</string>
    <string name="dialog_descartar_req_radio_2">El paciente está sano</string>
    <string name="dialog_descartar_req_radio_3">No fue posible resolver la solicitud</string>
    <string name="dialog_descartar_req_otro">Otro</string>
    <string name="dialog_descartar_req_hint_otro">Ingrese motivo</string>
    <string name="dialog_descartar_req_descartar">Descartar requerimiento</string>
    <string name="acerca_de_telefono_label">Datos de contacto</string>
    <string name="acerca_de_telefono">Teléfono: (571) 3077072 Bogotá</string>
    <string name="acerca_de_correo_label">Enviar ticket</string>
    <string name="acerca_de_historial_ticket">Historial Tickets</string>
    <string name="acerca_de_txt_btn_historial_ticket">Ver Tickets</string>
    <string name="acerca_de_correo">Correo: telederma@dermatologia.gov.co</string>
    <string name="acerca_de_enviar">Enviar</string>
    <string name="acerca_de_preguntas_frecuentes">Preguntas frecuentes</string>
    <string name="creditos_claudia_marcela">Dra. Claudia Marcela Rojas Daza</string>
    <string name="creditos_claudia_marcela_info">
        Directora General\nHospital Universitario Centro Dermatológico Federico Lleras Acosta\nDirectora General Telederma
    </string>
    <string name="creditos_xiomara_perea">Dra. Elin Xiomara Perea Flórez</string>
    <string name="creditos_xiomara_perea_info">
        Subdirectora Técnico Científica\nHospital Universitario Centro Dermatológico Federico Lleras Acosta\nDirectora Científica Telederma
    </string>
    <string name="creditos_camilo_barrera">Dr. Camilo A. Barrera Valencia</string>
    <string name="creditos_camilo_barrera_info">Asesor Telederma</string>
    <string name="creditos_brainco">Diseño y Desarrollo de la App:</string>
    <string name="creditos_brainco_info">BrainCo SAS\nwww.brainco.com.co</string>
    <string name="gestion_editar_perfil">Editar mi perfil</string>
    <string name="gestion_mesa_ayuda">Mesa de ayuda</string>
    <string name="gestion_creditos">Créditos</string>
    <string name="gestion_acerca_de">Acerca de Telederma</string>
    <string name="gestion_aviso_legal">Aviso legal</string>
    <string name="aprende_que_es_telederma">¿Qué es Telederma?</string>
    <string name="aprende_manejo_app">Manejo de la App</string>
    <string name="aprende_toma_imagenes">Toma de imágenes</string>
    <string name="aprende_semiologia">Semiología cutánea</string>
    <string name="aprende_toma_biopsia">Toma de biopsia</string>
    <string name="aprende_consejos">Consejos</string>
    <string name="aprende_certificacion">Certificación</string>
    <string name="aprende_semiologia_mensaje">
        Este módulo contiene recursos académicos de imagen, ilustración y texto de las
        principales lesiones de piel que orientará la descripción en la anamnesis y examen
        físico de la historia clínica de la teleconsulta.
    </string>
    <string name="aprende_semiologia_creditos_titulo">Créditos:</string>
    <string name="aprende_semiologia_creditos">
        Obra derivada del capítulo 3 del libro Dermatología Clínica. Conceptos Básicos. 2013. Hospital Universitario
        Centro Dermatológico Federico Lleras Acosta E.S.E. ISBN: 978-958-59331-1-8
    </string>
    <string name="aprende_semiologia_creditos_autores_titulo">Autores:</string>
    <string name="aprende_semiologia_creditos_autores">
        1. Texto: Luisa Fernanda Galindo Díaz, Héctor José Castellanos Lorduy. Adaptación: Sandra Helena Muvdi Arenas.
        \n2. Imágenes: Sandra Helena Muvdi Arenas, Nathalia Plaza Arteaga y Telederma.
        \n3. Ilustraciones: BrainCo S.A.S
    </string>
    <string name="aprende_semiologia_creditos_brainco_web">www.brainco.com.co</string>
</resources>