<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    tools:contexto="com.telederma.gov.co.fragments.CreditosFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:background="@drawable/fondo_creditos"
        android:orientation="vertical">

        <TextView
            style="@style/telederma_text_view_formulario_blue"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/creditos_claudia_marcela" />

        <TextView
            style="@style/telederma_text_view_formulario_gray"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/creditos_claudia_marcela_info" />

        <TextView
            style="@style/telederma_text_view_formulario_blue"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24sp"
            android:text="@string/creditos_xiomara_perea" />

        <TextView
            style="@style/telederma_text_view_formulario_gray"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/creditos_xiomara_perea_info" />

        <TextView
            style="@style/telederma_text_view_formulario_blue"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24sp"
            android:text="@string/creditos_camilo_barrera" />

        <TextView
            style="@style/telederma_text_view_formulario_gray"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/creditos_camilo_barrera_info" />

        <TextView
            style="@style/telederma_text_view_formulario_blue"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24sp"
            android:text="@string/creditos_brainco" />

        <TextView
            style="@style/telederma_text_view_formulario_gray"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/creditos_brainco_info" />

    </LinearLayout>

</RelativeLayout>