<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:contexto="com.telederma.gov.co.fragments.RecuperarContrasenaFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/background_title"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="11dp"
            android:text="@string/contrasena_recuperar_title"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            style="@style/telederma_text_view_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/label_usuario" />

        <EditText
            android:id="@+id/txt_documento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="numberPassword|textVisiblePassword"
            android:imeOptions="actionSend"
            android:hint="@string/soy_nuevo_usuario_hint" />

        <TextView
            style="@style/telederma_text_view_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:text="@string/contrasena_enviar_codigo" />

        <Button
            style="@style/telederma_button"
            android:id="@+id/btn_enviar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableTint="@color/white"
            android:drawableRight="@drawable/ic_send"
            android:text="@string/label_enviar" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"></FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gray_background"
            android:padding="10dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"
                android:text="@string/contrasena_recuperar_contacto_1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/contrasena_recuperar_contacto_2" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
